--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,8 @@
 		<artifactId>maven-compiler-plugin</artifactId>
 		<version>2.3.2</version>
 		<configuration>
-			<source>1.8</source>
-			<target>1.8</target>
+			<source>1.7</source>
+			<target>1.7</target>
 		</configuration>
 	</plugin>
       <plugin>
@@ -90,12 +90,6 @@
   
   <dependencies>
 
-	<dependency>
-	  <groupId>org.slf4j</groupId>
-	  <artifactId>slf4j-simple</artifactId>
-	  <version>1.7.5</version>
-	  <scope>test</scope>
-	</dependency>
 
 	<dependency>
 	  <groupId>org.apache.storm</groupId>
@@ -103,6 +97,7 @@
 	  <version>1.0.1</version>
 	  <scope>provided</scope>
 	</dependency>
+
 		
 	<!-- Exposition servlet-->
 <dependency>
@@ -110,6 +105,21 @@
   <artifactId>simpleclient_servlet</artifactId>
   <version>0.0.14</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>mail</artifactId>
+    <version>1.5.0-b01</version>
+</dependency>
+
+<!-- https://mvnrepository.com/artifact/javax.activation/activation -->
+<dependency>
+    <groupId>javax.activation</groupId>
+    <artifactId>activation</artifactId>
+    <version>1.1.1</version>
+</dependency>
+
 <!-- Pushgateway exposition-->
 <dependency>
   <groupId>io.prometheus</groupId>
